--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -180,7 +180,7 @@
       function getYear2024(){
      var list = [];
 
-     list.push("P1-Villa-01,Pooja Sharma,-5000,2000,3000,1000,,,,,,,"); 
+     list.push("P1-Villa-01,Pooja Sharma,0,2000,3000,3000,3000,,,,,,"); 
         list.push("P1-Villa-04,Bhupesh Saini,-3000,2000,3000,3000,,,,,,"); 
         list.push("P1-Villa-05,Shishir Maltiyar,-3000,2000,3000,3000,,,,,,"); 
         list.push("P1-Villa-06,Hemant Kumar,-5000,2000,2000,2000,,,,,,"); 
@@ -260,7 +260,7 @@
         list.push("P1-Villa-79,Rahul Peswani,-9000,2000,,,,,,,,"); 
         list.push("P1-Villa-80,Rahul Peswani,-11000,,,,,,,,,"); 
         list.push("P1-Villa-81,Mamta Sharma,-3000,2000,3000,3000,,,,,,"); 
-        list.push("P1-Villa-82,Swati Bansal,-3000,2000,3000,3000,,,,,,"); 
+        list.push("P1-Villa-82,Swati Bansal,0,2000,3000,3000,3000,3000,3000,,,"); 
         list.push("P1-Villa-83,Tarun Sharda,-11000,,,,,,,,,"); 
         list.push("P1-Villa-84,Tarun Sharda,-11000,,,,,,,,,"); 
         list.push("P1-Villa-85,Pradeep Verma,-5000,2000,2000,2000,,,,,,"); 
@@ -280,7 +280,7 @@
         list.push("P1-Villa-99,Sakshi Singh,0,2000,3000,3000,3000,3000,3000,,,"); 
         list.push("P1-Villa-100,Akansha Garg,0,2000,3000,3000,3000,3000,3000,,,"); 
         list.push("P1-Villa-101,Laxmi Agarwal,-11000,,,,,,,,,"); 
-        list.push("P1-Villa-102,Pratima Singh,-3000,2000,3000,3000,,,,,,"); 
+        list.push("P1-Villa-102,Pratima Singh,0,2000,3000,3000,3000,,,,,"); 
         list.push("P1-Villa-103,Ritika,-11000,,,,,,,,,"); 
         list.push("P1-Villa-104,Rajender Singh,-3000,2000,3000,3000,,,,,,"); 
         list.push("P1-Villa-105,Kedar Singh,0,2000,3000,3000,3000,3000,3000,,,"); 
