--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -286,7 +286,7 @@
         list.push("P1-Villa-105,Kedar Singh,0,2000,3000,3000,3000,3000,3000,,,"); 
         list.push("P1-Villa-106,Vandana Soni,-11000,,,,,,,,,"); 
         list.push("P1-Villa-107,Rita Soni,-11000,,,,,,,,,"); 
-        list.push("P1-Villa-108,Shanky Munjal,-3000,2000,3000,3000,,,,,,"); 
+        list.push("P1-Villa-108,Shanky Munjal,0,2000,3000,3000,3000,,,,,"); 
         list.push("P1-Villa-109,Satish Kumar,-11000,,,,,,,,,"); 
         list.push("P1-Villa-110,Deepika Sharma,-11000,,,,,,,,,"); 
         list.push("P1-Villa-111,Rajat Kumar Sharma,-11000,,,,,,,,,"); 
