--- a/OwnersRentDetails.html
+++ b/OwnersRentDetails.html
@@ -227,7 +227,7 @@
         list.push("P1-Villa-71,@Suresh kumar Sharma,@8875115223,@3,@Owner"); 
         list.push("P1-Villa-72,@Nikesh Chaudhary,@9828030761,@3,@Owner"); 
         list.push("P1-Villa-73,@Richa Sharma,@9811547001,@7,@Owner"); 
-        list.push("P1-Villa-74,@Praveen Kumar Prajapat,@9929206922,@2,@Owner"); 
+        list.push("P1-Villa-74,@Kanchan Anand,@8949271965,@2,@Owner"); 
         list.push("P1-Villa-75,@Archna Goswami,@9414218244,@2,@Owner"); 
         list.push("P1-Villa-76,@Surya Nagal,@9460892888,@2,@Owner"); 
         list.push("P1-Villa-77,@Devki Nandan Mathuriya,@8699130223,@2,@Owner"); 
