--- a/MemberShip.html
+++ b/MemberShip.html
@@ -213,7 +213,7 @@ list.push("P1-Villa-01,Pooja Sharma,Pending");
         list.push("P1-Villa-71,Suresh kumar Sharma,Pending"); 
         list.push("P1-Villa-72,Nikesh Chaudhary,Pending"); 
         list.push("P1-Villa-73,Richa Sharma,Done"); 
-        list.push("P1-Villa-74,Praveen Kumar Prajapat,Pending"); 
+        list.push("P1-Villa-74,Kanchan Anand,Pending"); 
         list.push("P1-Villa-75,Archna Goswami,Done"); 
         list.push("P1-Villa-76,Surya Nagal,Done"); 
         list.push("P1-Villa-77,Devki Nandan Mathuriya,Done"); 
