--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -252,7 +252,7 @@
         list.push("P1-Villa-71,Suresh kumar Sharma,-3000,2000,3000,3000,,,,,,"); 
         list.push("P1-Villa-72,Nikesh Chaudhary,-5000,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-73,Richa Sharma,0,2000,3000,3000,3000,3000,3000,,,"); 
-        list.push("P1-Villa-74,Praveen Kumar Prajapat,-11000,,,,,,,,,"); 
+        list.push("P1-Villa-74,Kanchan Anand,-11000,,,,,,,,,"); 
         list.push("P1-Villa-75,Archna Goswami,-3000,2000,3000,3000,,,,,,"); 
         list.push("P1-Villa-76,Surya Nagal,0,2000,3000,3000,3000,3000,3000,,,"); 
         list.push("P1-Villa-77,Devki Nandan Mathuriya,-3000,2000,3000,3000,,,,,,"); 
