--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -225,7 +225,7 @@
         list.push("P1-Villa-45,Nand Singh Rajawat,-3000,2000,3000,3000,,,,,,"); 
         list.push("P1-Villa-46,Vikas Mahala,-3000,2000,3000,3000,,,,,,"); 
         list.push("P1-Villa-47,Manoj Ji,0,2000,3000,3000,,,,,,"); 
-        list.push("P1-Villa-48,R C Sharma ,-3000,2000,3000,3000,,,,,,"); 
+        list.push("P1-Villa-48,R C Sharma ,0,2000,3000,3000,3000,3000,3000,,,"); 
         list.push("P1-Villa-49,Sunita Verma,-5000,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-50,Abhishek Garg,-3000,2000,3000,3000,,,,,,"); 
         list.push("P1-Villa-51,Jatin Kumar,-5000,2000,2000,2000,,,,,,"); 
