--- a/MemberShip.html
+++ b/MemberShip.html
@@ -210,7 +210,7 @@ list.push("P1-Villa-01,Pooja Sharma,Pending");
         list.push("P1-Villa-68,Shrish Jaiman,Done"); 
         list.push("P1-Villa-69,Piyush Sharma,Done"); 
         list.push("P1-Villa-70,Vineet Sharma,Done"); 
-        list.push("P1-Villa-71,Suresh kumar Sharma,Pending"); 
+        list.push("P1-Villa-71,Suresh kumar Sharma,Done"); 
         list.push("P1-Villa-72,Nikesh Chaudhary,Pending"); 
         list.push("P1-Villa-73,Richa Sharma,Done"); 
         list.push("P1-Villa-74,Kanchan Anand,Pending"); 
