--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -201,7 +201,7 @@
         list.push("P1-Villa-21,Dariya Singh,-3000,2000,3000,3000,,,,,,"); 
         list.push("P1-Villa-22,Shivani sanjeev sharma,-9000,2000,,,,,,,,");
         list.push("P1-Villa-23,Akshay Saraswat,0,0,0,0,,,,,,"); 
-        list.push("P1-Villa-24,Abhimanyu Saraswat,-3000,2000,3000,3000,,,,,,"); 
+        list.push("P1-Villa-24,Abhimanyu Saraswat,0,2000,3000,3000,3000,3000,3000,,,"); 
         list.push("P1-Villa-25,Pooja Khandelwal,-11000,,,,,,,,,"); 
         list.push("P1-Villa-26,Rakesh Kumar,0,2000,3000,3000,3000,,,,,"); 
         list.push("P1-Villa-27,Murari Sharma,-3000,2000,3000,3000,,,,,,"); 
@@ -249,7 +249,7 @@
         list.push("P1-Villa-68,Shrish Jaiman,-3000,2000,3000,3000,,,,,,"); 
         list.push("P1-Villa-69,Piyush Sharma,0,2000,3000,3000,3000,,,,,"); 
         list.push("P1-Villa-70,Vineet Mahera,-3000,2000,3000,3000,,,,,,"); 
-        list.push("P1-Villa-71,Suresh kumar Sharma,-3000,2000,3000,3000,,,,,,"); 
+        list.push("P1-Villa-71,Suresh kumar Sharma,0,2000,3000,3000,3000,,,,,"); 
         list.push("P1-Villa-72,Nikesh Chaudhary,-5000,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-73,Richa Sharma,0,2000,3000,3000,3000,3000,3000,,,"); 
         list.push("P1-Villa-74,Kanchan Anand,-11000,,,,,,,,,"); 
