--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -264,7 +264,7 @@
         list.push("P1-Villa-83,Tarun Sharda,-11000,,,,,,,,,"); 
         list.push("P1-Villa-84,Tarun Sharda,-11000,,,,,,,,,"); 
         list.push("P1-Villa-85,Pradeep Verma,-5000,2000,2000,2000,,,,,,"); 
-        list.push("P1-Villa-86,Surendra Agrawal,-3000,2000,3000,3000,,,,,,"); 
+        list.push("P1-Villa-86,Surendra Agrawal,0,2000,3000,3000,3000,,,,,"); 
         list.push("P1-Villa-87,Devendra Singh,-5000,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-88,Pankaj Chauhan & Pushpa Tomar,-2000,2000,3000,3000,1000,,,,,"); 
         list.push("P1-Villa-89,Khem Chand Nagal,-11000,,,,,,,,,"); 
