--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -222,14 +222,14 @@
         list.push("P1-Villa-42,Prakash Gaur,0,2000,3000,3000,3000,3000,3000,,,"); 
         list.push("P1-Villa-43,Arun Tripathi,-5000,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-44,Ravindra Verma,-3000,2000,3000,3000,,,,,,"); 
-        list.push("P1-Villa-45,Nand Singh Rajawat,-3000,2000,3000,3000,,,,,,"); 
+        list.push("P1-Villa-45,Nand Singh Rajawat,0,2000,3000,3000,3000,,,,,"); 
         list.push("P1-Villa-46,Vikas Mahala,-3000,2000,3000,3000,,,,,,"); 
         list.push("P1-Villa-47,Manoj Ji,0,2000,3000,3000,,,,,,"); 
         list.push("P1-Villa-48,R C Sharma ,0,2000,3000,3000,3000,3000,3000,,,"); 
         list.push("P1-Villa-49,Sunita Verma,-5000,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-50,Abhishek Garg,-3000,2000,3000,3000,,,,,,"); 
         list.push("P1-Villa-51,Jatin Kumar,-5000,2000,2000,2000,,,,,,"); 
-        list.push("P1-Villa-52,Shailesh Bansal,-3000,2000,3000,3000,,,,,,"); 
+        list.push("P1-Villa-52,Shailesh Bansal,0,2000,3000,3000,3000,,,,,"); 
         list.push("P1-Villa-53,Rohit Jain,-3000,2000,3000,3000,,,,,,"); 
         list.push("P1-Villa-54,Vinod Kumar Garg,-5000,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-55,Raj Kamal,-5000,2000,2000,2000,,,,,,"); 
