--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -187,7 +187,7 @@
         list.push("P1-Villa-07,Rahul Pandey,0,2000,3000,3000,3000,,,,,"); 
         list.push("P1-Villa-08,Anil Sharma,-5000,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-09,Raghvendra Sharma,-5000,2000,2000,2000,,,,,,"); 
-        list.push("P1-Villa-10,Jogendra Sachdeva,-3000,2000,3000,3000,,,,,,"); 
+        list.push("P1-Villa-10,Jogendra Sachdeva,0,2000,3000,3000,3000,,,,,"); 
         list.push("P1-Villa-11,Sundeep Mahala,-5000,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-12,Gaurav Kothari,0,2000,3000,3000,3000,,,,,"); 
         list.push("P1-Villa-13,Anil Sharma,-3000,2000,3000,3000,,,,,,"); 
@@ -230,9 +230,9 @@
         list.push("P1-Villa-50,Abhishek Garg,-3000,2000,3000,3000,,,,,,"); 
         list.push("P1-Villa-51,Jatin Kumar,-5000,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-52,Shailesh Bansal,0,2000,3000,3000,3000,,,,,"); 
-        list.push("P1-Villa-53,Rohit Jain,-3000,2000,3000,3000,,,,,,"); 
+        list.push("P1-Villa-53,Rohit Jain,0,2000,3000,3000,3000,,,,,"); 
         list.push("P1-Villa-54,Vinod Kumar Garg,-5000,2000,2000,2000,,,,,,"); 
-        list.push("P1-Villa-55,Raj Kamal,-5000,2000,2000,2000,,,,,,"); 
+        list.push("P1-Villa-55,Raj Kamal,0,2000,3000,3000,3000,,,,,"); 
         list.push("P1-Villa-56_57A,Kajor Mal Goyal,0,2000,3000,3000,3000,3000,3000,,,"); 
         list.push("P1-Villa-58_57B,Deepak Swaroop Garg,0,2000,3000,3000,3000,3000,3000,,,"); 
         list.push("P1-Villa-59,Pawan Jaiman,0,0,3000,3000,3000,,,,,"); 
