--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -197,7 +197,7 @@
         list.push("P1-Villa-17,khushi Khandelwal,-5000,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-18,Pooja   Saxena,-3000,2000,3000,3000,,,,,,"); 
         list.push("P1-Villa-19,Hitesh Sain,-5000,2000,2000,2000,,,,,,"); 
-        list.push("P1-Villa-20,Ved Prakash Parashar,-5000,2000,2000,2000,,,,,,"); 
+        list.push("P1-Villa-20,Ved Prakash Parashar,-2000,2000,3000,3000,1000,,,,,"); 
         list.push("P1-Villa-21,Dariya Singh,-3000,2000,3000,3000,,,,,,"); 
         list.push("P1-Villa-22,Shivani sanjeev sharma,-9000,2000,,,,,,,,");
         list.push("P1-Villa-23,Akshay Saraswat,0,0,0,0,,,,,,"); 
@@ -253,7 +253,7 @@
         list.push("P1-Villa-72,Nikesh Chaudhary,-5000,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-73,Richa Sharma,0,2000,3000,3000,3000,3000,3000,,,"); 
         list.push("P1-Villa-74,Kanchan Anand,-11000,,,,,,,,,"); 
-        list.push("P1-Villa-75,Archna Goswami,-3000,2000,3000,3000,,,,,,"); 
+        list.push("P1-Villa-75,Archna Goswami,0,2000,3000,3000,3000,,,,,"); 
         list.push("P1-Villa-76,Surya Nagal,0,2000,3000,3000,3000,3000,3000,,,"); 
         list.push("P1-Villa-77,Devki Nandan Mathuriya,-3000,2000,3000,3000,,,,,,"); 
         list.push("P1-Villa-78,Akshat Mangal,-11000,,,,,,,,,"); 
@@ -274,7 +274,7 @@
         list.push("P1-Villa-93,Manju Sexena,-11000,,,,,,,,,"); 
         list.push("P1-Villa-94,Rounak Rajendra Bhatt,-11000,,,,,,,,,"); 
         list.push("P1-Villa-95,Naresh Mathur,0,0,3000,3000,3000,,,,,"); 
-        list.push("P1-Villa-96,George Pal Singh,-3000,2000,3000,3000,,,,,,"); 
+        list.push("P1-Villa-96,George Pal Singh,0,2000,3000,3000,3000,,,,,"); 
         list.push("P1-Villa-97,Surendra Kumawat,-11000,,,,,,,,,"); 
         list.push("P1-Villa-98,Hitesh Jain,-3000,2000,3000,3000,,,,,,"); 
         list.push("P1-Villa-99,Sakshi Singh,0,2000,3000,3000,3000,3000,3000,,,"); 
