--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -190,7 +190,7 @@
         list.push("P1-Villa-10,Jogendra Sachdeva,0,2000,3000,3000,3000,,,,,"); 
         list.push("P1-Villa-11,Sundeep Mahala,-5000,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-12,Gaurav Kothari,0,2000,3000,3000,3000,,,,,"); 
-        list.push("P1-Villa-13,Anil Sharma,-3000,2000,3000,3000,,,,,,"); 
+        list.push("P1-Villa-13,Anil Sharma,0,2000,3000,3000,3000,,,,,"); 
         list.push("P1-Villa-14,Ayush   Shandilya,-3000,2000,3000,3000,,,,,,"); 
         list.push("P1-Villa-15,Sunil   Kumar,-5000,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-16,Preeti Meena,-5000,2000,2000,2000,,,,,,"); 
@@ -227,7 +227,7 @@
         list.push("P1-Villa-47,Manoj Ji,0,2000,3000,3000,,,,,,"); 
         list.push("P1-Villa-48,R C Sharma ,0,2000,3000,3000,3000,3000,3000,,,"); 
         list.push("P1-Villa-49,Sunita Verma,-5000,2000,2000,2000,,,,,,"); 
-        list.push("P1-Villa-50,Abhishek Garg,-3000,2000,3000,3000,,,,,,"); 
+        list.push("P1-Villa-50,Abhishek Garg,0,2000,3000,3000,3000,3000,,,,"); 
         list.push("P1-Villa-51,Jatin Kumar,-5000,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-52,Shailesh Bansal,0,2000,3000,3000,3000,,,,,"); 
         list.push("P1-Villa-53,Rohit Jain,0,2000,3000,3000,3000,,,,,"); 
@@ -245,7 +245,7 @@
         list.push("P1-Villa-64,Sahil Meghnani, -3000,2000,3000,3000,,,,,,");
         list.push("P1-Villa-65,Jalaj Rajpurohit,0,2000,3000,3000,3000,,,,,");
         list.push("P1-Villa-66,Manju Gehlot,-3000,2000,3000,3000,,,,,,");
-        list.push("P1-Villa-67,Abhishek Jaiman,-3000,2000,3000,3000,,,,,,"); 
+        list.push("P1-Villa-67,Abhishek Jaiman,0,2000,3000,3000,3000,,,,,"); 
         list.push("P1-Villa-68,Shrish Jaiman,-3000,2000,3000,3000,,,,,,"); 
         list.push("P1-Villa-69,Piyush Sharma,0,2000,3000,3000,3000,,,,,"); 
         list.push("P1-Villa-70,Vineet Mahera,-3000,2000,3000,3000,,,,,,"); 
