--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -246,7 +246,7 @@
         list.push("P1-Villa-65,Jalaj Rajpurohit,0,2000,3000,3000,3000,,,,,");
         list.push("P1-Villa-66,Manju Gehlot,-3000,2000,3000,3000,,,,,,");
         list.push("P1-Villa-67,Abhishek Jaiman,0,2000,3000,3000,3000,,,,,"); 
-        list.push("P1-Villa-68,Shrish Jaiman,-3000,2000,3000,3000,,,,,,"); 
+        list.push("P1-Villa-68,Shrish Jaiman,0,2000,3000,3000,3000,,,,,"); 
         list.push("P1-Villa-69,Piyush Sharma,0,2000,3000,3000,3000,,,,,"); 
         list.push("P1-Villa-70,Vineet Mahera,-3000,2000,3000,3000,,,,,,"); 
         list.push("P1-Villa-71,Suresh kumar Sharma,0,2000,3000,3000,3000,,,,,"); 
@@ -255,7 +255,7 @@
         list.push("P1-Villa-74,Kanchan Anand,-11000,,,,,,,,,"); 
         list.push("P1-Villa-75,Archna Goswami,0,2000,3000,3000,3000,,,,,"); 
         list.push("P1-Villa-76,Surya Nagal,0,2000,3000,3000,3000,3000,3000,,,"); 
-        list.push("P1-Villa-77,Devki Nandan Mathuriya,-3000,2000,3000,3000,,,,,,"); 
+        list.push("P1-Villa-77,Devki Nandan Mathuriya,0,2000,3000,3000,3000,,,,,"); 
         list.push("P1-Villa-78,Akshat Mangal,-11000,,,,,,,,,"); 
         list.push("P1-Villa-79,Rahul Peswani,-9000,2000,,,,,,,,"); 
         list.push("P1-Villa-80,Rahul Peswani,-11000,,,,,,,,,"); 
@@ -282,7 +282,7 @@
         list.push("P1-Villa-101,Laxmi Agarwal,-11000,,,,,,,,,"); 
         list.push("P1-Villa-102,Pratima Singh,0,2000,3000,3000,3000,,,,,"); 
         list.push("P1-Villa-103,Ritika,-11000,,,,,,,,,"); 
-        list.push("P1-Villa-104,Rajender Singh,-3000,2000,3000,3000,,,,,,"); 
+        list.push("P1-Villa-104,Rajender Singh,0,2000,3000,3000,3000,,,,,"); 
         list.push("P1-Villa-105,Kedar Singh,0,2000,3000,3000,3000,3000,3000,,,"); 
         list.push("P1-Villa-106,Vandana Soni,-11000,,,,,,,,,"); 
         list.push("P1-Villa-107,Rita Soni,-11000,,,,,,,,,"); 
