--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -248,7 +248,7 @@
         list.push("P1-Villa-67,Abhishek Jaiman,0,2000,3000,3000,3000,,,,,"); 
         list.push("P1-Villa-68,Shrish Jaiman,0,2000,3000,3000,3000,,,,,"); 
         list.push("P1-Villa-69,Piyush Sharma,0,2000,3000,3000,3000,,,,,"); 
-        list.push("P1-Villa-70,Vineet Mahera,0,2000,3000,3000,,,,,,"); 
+        list.push("P1-Villa-70,Vineet Mahera,0,2000,3000,3000,3000,,,,,"); 
         list.push("P1-Villa-71,Suresh kumar Sharma,0,2000,3000,3000,3000,,,,,"); 
         list.push("P1-Villa-72,Nikesh Chaudhary,-5000,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-73,Richa Sharma,0,2000,3000,3000,3000,3000,3000,,,"); 
