--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -182,7 +182,7 @@
 
      list.push("P1-Villa-01,Pooja Sharma,0,2000,3000,3000,3000,,,,,,"); 
         list.push("P1-Villa-04,Bhupesh Saini,0,2000,3000,3000,3000,,,,,"); 
-        list.push("P1-Villa-05,Shishir Maltiyar,-3000,2000,3000,3000,,,,,,"); 
+        list.push("P1-Villa-05,Shishir Maltiyar,0,2000,3000,3000,3000,,,,,"); 
         list.push("P1-Villa-06,Hemant Kumar,-5000,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-07,Rahul Pandey,0,2000,3000,3000,3000,,,,,"); 
         list.push("P1-Villa-08,Anil Sharma,-5000,2000,2000,2000,,,,,,"); 
