--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -275,7 +275,7 @@
         list.push("P1-Villa-94,Rounak Rajendra Bhatt,-11000,,,,,,,,,"); 
         list.push("P1-Villa-95,Naresh Mathur,0,0,3000,3000,3000,,,,,"); 
         list.push("P1-Villa-96,George Pal Singh,0,2000,3000,3000,3000,,,,,"); 
-        list.push("P1-Villa-97,Surendra Kumawat,-11000,,,,,,,,,"); 
+        list.push("P1-Villa-97,Surendra Kumawat,-5000,2000,3000,1000,,,,,,"); 
         list.push("P1-Villa-98,Hitesh Jain,-3000,2000,3000,3000,,,,,,"); 
         list.push("P1-Villa-99,Sakshi Singh,0,2000,3000,3000,3000,3000,3000,,,"); 
         list.push("P1-Villa-100,Akansha Garg,0,2000,3000,3000,3000,3000,3000,,,"); 
