--- a/MemberShip.html
+++ b/MemberShip.html
@@ -162,7 +162,7 @@ list.push("P1-Villa-01,Pooja Sharma,Pending");
         list.push("P1-Villa-19,Hitesh Sain,Fees_Only"); 
         list.push("P1-Villa-20,Ved Prakash Parashar,Pending"); 
         list.push("P1-Villa-21,Dariya Singh,Done"); 
-        list.push("P1-Villa-22,Shivani sanjeev sharma,Pending"); 
+        list.push("P1-Villa-22,Shivani sanjeev sharma,Fees_Only"); 
         list.push("P1-Villa-23,Akshay Saraswat,Pending"); 
         list.push("P1-Villa-24,Abhimanyu Saraswat,Done"); 
         list.push("P1-Villa-25,Pooja Khandelwal,Pending"); 
@@ -197,7 +197,7 @@ list.push("P1-Villa-01,Pooja Sharma,Pending");
         list.push("P1-Villa-54,Vinod Kumar Garg,Pending"); 
         list.push("P1-Villa-55,Raj Kamal,Pending"); 
         list.push("P1-Villa-56_57A,Kajor Mal Goyal,Pending"); 
-        list.push("P1-Villa-58_57B,Deepak Swaroop Garg,Pending"); 
+        list.push("P1-Villa-58_57B,Deepak Swaroop Garg,Done"); 
         list.push("P1-Villa-59,Pawan Jaiman,Pending"); 
         list.push("P1-Villa-60,Santra Devi,Pending"); 
         list.push("P1-Villa-61,Divanshi Dhanjani,Pending"); 
@@ -211,7 +211,7 @@ list.push("P1-Villa-01,Pooja Sharma,Pending");
         list.push("P1-Villa-69,Piyush Sharma,Done"); 
         list.push("P1-Villa-70,Vineet Sharma,Done"); 
         list.push("P1-Villa-71,Suresh kumar Sharma,Done"); 
-        list.push("P1-Villa-72,Nikesh Chaudhary,Pending"); 
+        list.push("P1-Villa-72,Nikesh Chaudhary,Form_Only"); 
         list.push("P1-Villa-73,Richa Sharma,Done"); 
         list.push("P1-Villa-74,Kanchan Anand,Pending"); 
         list.push("P1-Villa-75,Archna Goswami,Done"); 
@@ -219,7 +219,7 @@ list.push("P1-Villa-01,Pooja Sharma,Pending");
         list.push("P1-Villa-77,Devki Nandan Mathuriya,Done"); 
         list.push("P1-Villa-78,Akshat Mangal,Pending"); 
         list.push("P1-Villa-79,Rahul Peswani,Done"); 
-        list.push("P1-Villa-80,Rahul Peswani,Pending"); 
+        list.push("P1-Villa-80,Rahul Peswani,Form_Only"); 
         list.push("P1-Villa-81,Mamta Sharma,Fees_Only"); 
         list.push("P1-Villa-82,Swati Bansal,Done"); 
         list.push("P1-Villa-83,Tarun Sharda,Pending"); 
@@ -234,21 +234,21 @@ list.push("P1-Villa-01,Pooja Sharma,Pending");
         list.push("P1-Villa-92,Anil Kumar Gupta,Pending"); 
         list.push("P1-Villa-93,Manju Sexena,Pending"); 
         list.push("P1-Villa-94,Rounak Rajendra Bhatt,Pending"); 
-        list.push("P1-Villa-95,Naresh Mathur,Pending"); 
-        list.push("P1-Villa-96,George Pal Singh,Pending"); 
+        list.push("P1-Villa-95,Naresh Mathur,Done"); 
+        list.push("P1-Villa-96,George Pal Singh,Done"); 
         list.push("P1-Villa-97,Surendra Kumawat,Done"); 
         list.push("P1-Villa-98,Hitesh Jain,Fees_Only"); 
         list.push("P1-Villa-99,Sakshi Singh,Pending"); 
         list.push("P1-Villa-100,Akansha Garg,Fees_Only"); 
         list.push("P1-Villa-101,Laxmi Agarwal,Pending"); 
-        list.push("P1-Villa-102,Pratima Singh,Fees_Only"); 
+        list.push("P1-Villa-102,Pratima Singh,Done"); 
         list.push("P1-Villa-103,Ritika,Pending"); 
         list.push("P1-Villa-104,Rajender Singh,Fees_Only"); 
         list.push("P1-Villa-105,kedar Singh,Pending"); 
         list.push("P1-Villa-106,Vandana Soni,Pending"); 
         list.push("P1-Villa-107,Rita Soni,Pending"); 
         list.push("P1-Villa-108,Shanky Munjal,Done"); 
-        list.push("P1-Villa-109,Satish Kumar,Fees_Only"); 
+        list.push("P1-Villa-109,Satish Kumar,Done"); 
         list.push("P1-Villa-110,Deepika Sharma,Pending"); 
         list.push("P1-Villa-111,Rajat Kumar Sharma,Pending"); 
 
