--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -188,7 +188,7 @@
         list.push("P1-Villa-08,Anil Sharma,-5000,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-09,Raghvendra Sharma,-5000,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-10,Jogendra Sachdeva,0,2000,3000,3000,3000,,,,,"); 
-        list.push("P1-Villa-11,Sundeep Mahala,-5000,2000,2000,2000,,,,,,"); 
+        list.push("P1-Villa-11,Sundeep Mahala,0,2000,3000,3000,3000,,,,,"); 
         list.push("P1-Villa-12,Gaurav Kothari,0,2000,3000,3000,3000,,,,,"); 
         list.push("P1-Villa-13,Anil Sharma,0,2000,3000,3000,3000,,,,,"); 
         list.push("P1-Villa-14,Ayush   Shandilya,-3000,2000,3000,3000,,,,,,"); 
