--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -241,7 +241,7 @@
 
 
         list.push("P1-Villa-62,Lal Singh,-11000,,,,,,,,,"); 
-        list.push("P1-Villa-63,Yogesh Ji,-3000,2000,3000,3000,,,,,,"); 
+        list.push("P1-Villa-63,Yogesh Ji,0,2000,3000,3000,3000,,,,,"); 
         list.push("P1-Villa-64,Sahil Meghnani, -3000,2000,3000,3000,,,,,,");
         list.push("P1-Villa-65,Jalaj Rajpurohit,0,2000,3000,3000,3000,,,,,");
         list.push("P1-Villa-66,Manju Gehlot,-3000,2000,3000,3000,,,,,,");
@@ -263,7 +263,7 @@
         list.push("P1-Villa-82,Swati Bansal,0,2000,3000,3000,3000,3000,3000,,,"); 
         list.push("P1-Villa-83,Tarun Sharda,-11000,,,,,,,,,"); 
         list.push("P1-Villa-84,Tarun Sharda,-11000,,,,,,,,,"); 
-        list.push("P1-Villa-85,Pradeep Verma,-5000,2000,2000,2000,,,,,,"); 
+        list.push("P1-Villa-85,Pradeep Verma,0,2000,3000,3000,3000,,,,,"); 
         list.push("P1-Villa-86,Surendra Agrawal,0,2000,3000,3000,3000,,,,,"); 
         list.push("P1-Villa-87,Devendra Singh,-5000,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-88,Pankaj Chauhan & Pushpa Tomar,-2000,2000,3000,3000,1000,,,,,"); 
@@ -284,8 +284,8 @@
         list.push("P1-Villa-103,Ritika,-11000,,,,,,,,,"); 
         list.push("P1-Villa-104,Rajender Singh,0,2000,3000,3000,3000,,,,,"); 
         list.push("P1-Villa-105,Kedar Singh,0,2000,3000,3000,3000,3000,3000,,,"); 
-        list.push("P1-Villa-106,Vandana Soni,-11000,,,,,,,,,"); 
-        list.push("P1-Villa-107,Rita Soni,-11000,,,,,,,,,"); 
+        list.push("P1-Villa-106,Vandana Soni,-6000,0,0,,,,,,,"); 
+        list.push("P1-Villa-107,Rita Soni,-6000,0,0,,,,,,,"); 
         list.push("P1-Villa-108,Shanky Munjal,0,2000,3000,3000,3000,,,,,"); 
         list.push("P1-Villa-109,Satish Kumar,-11000,,,,,,,,,"); 
         list.push("P1-Villa-110,Deepika Sharma,-11000,,,,,,,,,"); 
