--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -220,7 +220,7 @@
         list.push("P1-Villa-40,Anita Kanwar,-5000,0,2000,2000,,,,,,"); 
         list.push("P1-Villa-41,Monika Mittal,-5000,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-42,Prakash Gaur,0,2000,3000,3000,3000,3000,3000,,,"); 
-        list.push("P1-Villa-43,Arun Tripathi,-5000,2000,2000,2000,,,,,,"); 
+        list.push("P1-Villa-43,Arun Tripathi,0,2000,3000,3000,3000,,,,,"); 
         list.push("P1-Villa-44,Ravindra Verma,-3000,2000,3000,3000,,,,,,"); 
         list.push("P1-Villa-45,Nand Singh Rajawat,0,2000,3000,3000,3000,,,,,"); 
         list.push("P1-Villa-46,Vikas Mahala,0,2000,3000,3000,3000,,,,,"); 
