--- a/MemberShip.html
+++ b/MemberShip.html
@@ -245,7 +245,7 @@ list.push("P1-Villa-01,Pooja Sharma,Pending");
         list.push("P1-Villa-103,Ritika,Pending"); 
         list.push("P1-Villa-104,Rajender Singh,Fees_Only"); 
         list.push("P1-Villa-105,kedar Singh,Pending"); 
-        list.push("P1-Villa-106,Vandana Soni,Pending"); 
+        list.push("P1-Villa-106,Vandana Soni,Fees_Only"); 
         list.push("P1-Villa-107,Rita Soni,Pending"); 
         list.push("P1-Villa-108,Shanky Munjal,Done"); 
         list.push("P1-Villa-109,Satish Kumar,Done"); 
