--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -259,7 +259,7 @@
         list.push("P1-Villa-78,Akshat Mangal,-11000,,,,,,,,,"); 
         list.push("P1-Villa-79,Rahul Peswani,-9000,2000,,,,,,,,"); 
         list.push("P1-Villa-80,Rahul Peswani,-11000,,,,,,,,,"); 
-        list.push("P1-Villa-81,Mamta Sharma,-3000,2000,3000,3000,,,,,,"); 
+        list.push("P1-Villa-81,Mamta Sharma,0,2000,3000,3000,3000,,,,,"); 
         list.push("P1-Villa-82,Swati Bansal,0,2000,3000,3000,3000,3000,3000,,,"); 
         list.push("P1-Villa-83,Tarun Sharda,-11000,,,,,,,,,"); 
         list.push("P1-Villa-84,Tarun Sharda,-11000,,,,,,,,,"); 
