--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -231,13 +231,13 @@
         list.push("P1-Villa-51,Jatin Kumar,-5000,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-52,Shailesh Bansal,0,2000,3000,3000,3000,,,,,"); 
         list.push("P1-Villa-53,Rohit Jain,0,2000,3000,3000,3000,,,,,"); 
-        list.push("P1-Villa-54,Vinod Kumar Garg,-5000,2000,2000,2000,,,,,,"); 
+        list.push("P1-Villa-54,Vinod Kumar Garg,0,2000,3000,3000,3000,,,,,"); 
         list.push("P1-Villa-55,Raj Kamal,0,2000,3000,3000,3000,,,,,"); 
         list.push("P1-Villa-56_57A,Kajor Mal Goyal,0,2000,3000,3000,3000,3000,3000,,,"); 
         list.push("P1-Villa-58_57B,Deepak Swaroop Garg,0,2000,3000,3000,3000,3000,3000,,,"); 
         list.push("P1-Villa-59,Pawan Jaiman,0,0,3000,3000,3000,,,,,"); 
         list.push("P1-Villa-60,Santra Devi,-11000,,,,,,,,,"); 
-        list.push("P1-Villa-61,Divanshi Dhanjani,-3000,2000,3000,3000,,,,,,"); 
+        list.push("P1-Villa-61,Divanshi Dhanjani,0,2000,3000,3000,3000,,,,,"); 
 
 
         list.push("P1-Villa-62,Lal Singh,-11000,,,,,,,,,"); 
