--- a/MemberShip.html
+++ b/MemberShip.html
@@ -183,7 +183,7 @@ list.push("P1-Villa-01,Pooja Sharma,Pending");
         list.push("P1-Villa-40,Anita Kanwar,Pending"); 
         list.push("P1-Villa-41,Monika Mittal,Pending"); 
         list.push("P1-Villa-42,Prakash Gaur,Done"); 
-        list.push("P1-Villa-43,Arun Tripathi,Form_Only"); 
+        list.push("P1-Villa-43,Arun Tripathi,Done"); 
         list.push("P1-Villa-44,Ravindra Verma,Form_Only"); 
         list.push("P1-Villa-45,Nand Singh Rajawat,Form_Only"); 
         list.push("P1-Villa-46,Vikas Mahala,Done"); 
@@ -198,7 +198,7 @@ list.push("P1-Villa-01,Pooja Sharma,Pending");
         list.push("P1-Villa-55,Raj Kamal,Pending"); 
         list.push("P1-Villa-56_57A,Kajor Mal Goyal,Pending"); 
         list.push("P1-Villa-58_57B,Deepak Swaroop Garg,Done"); 
-        list.push("P1-Villa-59,Pawan Jaiman,Pending"); 
+        list.push("P1-Villa-59,Pawan Jaiman,Done"); 
         list.push("P1-Villa-60,Santra Devi,Pending"); 
         list.push("P1-Villa-61,Divanshi Dhanjani,Pending"); 
         list.push("P1-Villa-62,Lal Singh,Pending"); 
