--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -199,7 +199,7 @@
         list.push("P1-Villa-19,Hitesh Sain,-5000,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-20,Ved Prakash Parashar,-2000,2000,3000,3000,1000,,,,,"); 
         list.push("P1-Villa-21,Dariya Singh,-3000,2000,3000,3000,,,,,,"); 
-        list.push("P1-Villa-22,Shivani sanjeev sharma,-7000,2000,2000,,,,,,,");
+        list.push("P1-Villa-22,Shivani sanjeev sharma,-5000,2000,3000,1000,,,,,,");
         list.push("P1-Villa-23,Akshay Saraswat,0,0,0,0,,,,,,");  
         list.push("P1-Villa-24,Abhimanyu Saraswat,0,2000,3000,3000,3000,3000,3000,,,"); 
         list.push("P1-Villa-25,Pooja Khandelwal,-11000,,,,,,,,,"); 
@@ -215,7 +215,7 @@
         list.push("P1-Villa-35,D V Saraswat,0,2000,3000,3000,3000,,,,,"); 
         list.push("P1-Villa-36,Harish Kumar Yadav,-3000,2000,3000,3000,,,,,,"); 
         list.push("P1-Villa-37,Gajendra Sharma,0,2000,3000,3000,3000,,,,,"); 
-        list.push("P1-Villa-38,ManishaSingh,-3000,2000,3000,3000,,,,,,"); 
+        list.push("P1-Villa-38,ManishaSingh,0,2000,3000,3000,3000,,,,,"); 
         list.push("P1-Villa-39,Manish Salvi,0,2000,3000,3000,3000,,,,,"); 
         list.push("P1-Villa-40,Anita Kanwar,-5000,0,2000,2000,,,,,,"); 
         list.push("P1-Villa-41,Monika Mittal,-5000,2000,2000,2000,,,,,,"); 
@@ -284,8 +284,8 @@
         list.push("P1-Villa-103,Ritika,-11000,,,,,,,,,"); 
         list.push("P1-Villa-104,Rajender Singh,0,2000,3000,3000,3000,,,,,"); 
         list.push("P1-Villa-105,Kedar Singh,0,2000,3000,3000,3000,3000,3000,,,"); 
-        list.push("P1-Villa-106,Vandana Soni,-6000,0,0,,,,,,,"); 
-        list.push("P1-Villa-107,Rita Soni,-6000,0,0,,,,,,,"); 
+        list.push("P1-Villa-106,Vandana Soni,0,0,0,3000,3000,,,,,"); 
+        list.push("P1-Villa-107,Rita Soni,0,0,0,3000,3000,,,,,"); 
         list.push("P1-Villa-108,Shanky Munjal,0,2000,3000,3000,3000,,,,,"); 
         list.push("P1-Villa-109,Satish Kumar,-11000,,,,,,,,,"); 
         list.push("P1-Villa-110,Deepika Sharma,-11000,,,,,,,,,"); 
